--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-*.pyc
-__pycache__/
-*.pyo
-*.pyd
-*.egg-info/
-.DS_STORE
+# Created by venv; see https://docs.python.org/3/library/venv.html
 lib/
+include/
+bin/
+__*
+*.cfg
 share/
+*DS*
